@@ -290,7 +290,7 @@ public abstract class MessageDialogAbstract extends Dialog {
             final String newS = oldS.substring(0, e.start) + e.text + oldS.substring(e.end);
             if (!newS.isEmpty()) {
                try {
-                  new Long(newS);
+                  Long.valueOf(newS);
                } catch (final NumberFormatException nfe) {
                   e.doit = false;
                }
@@ -313,7 +313,7 @@ public abstract class MessageDialogAbstract extends Dialog {
             final String newS = oldS.substring(0, e.start) + e.text + oldS.substring(e.end);
             if (!newS.isEmpty()) {
                try {
-                  new Long(newS);
+                  Long.valueOf(newS);
                } catch (final NumberFormatException nfe) {
                   e.doit = false;
                }
